--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*Main page(home page)*/
 body {
     background: #ffffff;
     overflow: hidden;
@@ -15,14 +16,15 @@ body {
     position: relative; right:0px; top:200px
 }
 
-#nav ul{
+#nav ul {
     font-size: 20px;
     margin: 40px;
-    position: relative; bottom:430px; right:60px
+    position: relative; bottom:800px; right:60px
 }
 
+/*Resume page*/
 #resumeimage {
-    position: relative; left: 200px; top:400px
+    position: relative; left: 20px; top:40px
         
 }
 
@@ -32,8 +34,8 @@ body {
     font-size: 140px;
 }
 
-resumenav ul{
-    font-size: 59px;
+#resumenav {
+    font-size: 590px;
     margin: 400px;
-    position: relative; bottom:40px; right:60px
+    position: relative; bottom:400px; right:60px
 }
