--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 /*Main page(base style)*/
 
-
 #mainpage {
     background-color: white;
     overflow: hidden;
@@ -15,6 +14,14 @@
 .sidebar {
     min-width: 300px;
     background-color: lightblue;
+}
+
+#nav {
+    font-size: 20px;
+    display: flex;
+    margin: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .content {
@@ -60,6 +67,10 @@ footer {
 
     .sidebar {
         height: 150px;
+    }
+
+    #nav {
+        flex-direction: row;
     }
 
 }
