--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 
 .sidebar {
     min-width: 300px;
-    background-color: lightblue;
+    background-color: white;
 }
 
 #nav {
@@ -28,7 +28,7 @@
 .content {
     display: flex;
     flex: 1;
-    background-color: blue;
+    background-color: white;
     justify-content: center;
     align-items: center;
 }
@@ -40,9 +40,14 @@
 
 
 footer {
-    height: 100px;
-    background-color: palevioletred;
     display: flex;
+    height: 100px;
+    background-color: white;
+    align-items:end;
+}
+
+#footy {
+    font-size: 6vw;
 }
 
 /*Resume page*/
