--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@
     background-color: darkcyan;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     gap: 150px;
 }
 
@@ -81,8 +82,13 @@ footer {
 
 /*Contact Page*/
 
-.contactinfo {
-    
+.logos {
+    font-size: 100px;
+}
+
+.logogroup {
+    display: flex;
+    flex-direction: row;
 }
 
 
