--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /*Main page(base style)*/
 
 #mainpage {
-    background-color: yellow;
+    background-color: white;
     overflow: hidden;
     min-height: 100vh;
 }
@@ -13,7 +13,7 @@
 
 .sidebar {
     min-width: 300px;
-    background-color: purple;
+    background-color: white;
 }
 
 #nav {
@@ -28,7 +28,7 @@
 .content {
     display: flex;
     flex: 1;
-    background-color: darkorchid;
+    background-color: white;
     justify-content: center;
     align-items: center;
     flex-direction: row;
@@ -44,7 +44,7 @@
 footer {
     display: flex;
     height: 100px;
-    background-color: gold;
+    background-color: white;
     align-items:end;
     font-size: 6vw;
 }
@@ -75,7 +75,7 @@ a:hover, a:active { text-decoration: none; color:black }
 #resumeheader {
    display: flex;
    font-size: 6vw;
-   background-color: yellowgreen;
+   background-color: white;
    justify-content: center;
 }
 
@@ -105,7 +105,7 @@ a:hover, a:active { text-decoration: none; color:black }
 .content2 {
     display: flex;
     flex: 1;
-    background-color: darkorchid;
+    background-color: white;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -127,7 +127,7 @@ a:hover, a:active { text-decoration: none; color:black }
 .content3 {
     display: flex;
     flex: 1;
-    background-color: goldenrod;
+    background-color: white;
     justify-content: flex-start;
     align-items: left;
     flex-direction: column;
@@ -149,6 +149,18 @@ a:hover, a:active { text-decoration: none; color:black }
 .ddtext {
     padding: 15px 5px 0px 25px;
     font-size: 40px;
+}
+
+/*Kaledo Page*/
+
+.txmipic {
+    max-width: 70%;
+    height: auto;
+}
+
+.txmitext {
+    padding: 15px 5px 0px 25px;
+    font-size: 20px;
 }
 
 /*media queries*/
