title image been put in

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,11 @@ footer {
     font-size: 6vw;
 }
 
+#derscollege {
+    max-width: 40%;
+    height: auto;
+}
+
 /* Globally */
 a { 
     color:black;
