--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
 }
 
 #nav {
-    font-size: 2.5vw;
+    font-size: 35px;
     display: flex;
     margin: center;
     flex-direction: column;
@@ -218,6 +218,7 @@ a:hover, a:active { text-decoration: none; color:black }
         flex-direction: row;
         align-items: center;
         padding: 0;
+        font-size: 25px;
     }
 
     #resumenav {
