--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,19 @@ a:hover, a:active { text-decoration: none; color:black }
     font-size: 20px;
 }
 
+.garmentphotos {
+    max-width: 30%;
+    height: auto;
+}
+
+.garmentset {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
 /*media queries*/
 
 @media only screen and (max-width: 992px) {
