--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,32 @@
     src: url(Andersfont.otf);
 }
 
+@font-face {
+    font-family: 'spike';
+    src: url(Spikeless.ttf);
+}
+
+@font-face {
+    font-family: 'louisa';
+    src: url(LouisaCP.otf);
+}
+
+@font-face {
+    font-family: 'tangerine';
+    src: url(tangerine.ttf);
+}
+
+@font-face {
+    font-family: 'tangerineb';
+    src: url(tangerineB.ttf);
+}
+
+
+
 /*Main page(base style)*/
 
 #mainpage {
-    background-color: white;
+    background-color: black;
     overflow: hidden;
     min-height: 100vh;
 }
@@ -19,7 +41,7 @@
 
 .sidebar {
     min-width: 300px;
-    background-color: white;
+    background-color: black;
 }
 
 #nav {
@@ -29,12 +51,13 @@
     flex-direction: column;
     justify-content: center;
     gap: 20px;
+    font-family: "tangerine";
 }
 
 .content {
     display: flex;
     flex: 1;
-    background-color: white;
+    background-color: black;
     justify-content: center;
     align-items: center;
     flex-direction: row;
@@ -50,9 +73,11 @@
 footer {
     display: flex;
     height: 100px;
-    background-color: white;
+    background-color: black;
     align-items:end;
     font-size: 6vw;
+    color: white;
+    font-family: "tangerineb";
 }
 
 #derscollege {
@@ -62,50 +87,51 @@ footer {
 
 /* Font Decoration */
 a { 
-    color:black;
+    color:white;
     text-decoration: none;
 }
 
-a:visited { text-decoration: none; color:black; }
-a:hover { text-decoration: none; color:black; }
-a:focus { text-decoration: none; color:black; }
-a:hover, a:active { text-decoration: none; color:black }
+a:visited { text-decoration: none; color:white; }
+a:hover { text-decoration: none; color:white; }
+a:focus { text-decoration: none; color:white; }
+a:hover, a:active { text-decoration: none; color:white }
 
 .resumetag:hover {
-    color: rgb(217, 255, 247);
+    color: rgb(144, 255, 59);
 }
 
 .txmitag:hover {
-    color: rgb(255, 238, 241);
+    color: rgb(144, 255, 59);
 }
 
 .kaledotag:hover {
-    color: rgb(255, 255, 208);
+    color: rgb(144, 255, 59);
 }
 
 .contacttag:hover {
-    color:rgb(234, 255, 202);
+    color:rgb(144, 255, 59);
 }
 
 .fdsatag:hover {
-    color: rgb(84, 84, 158);
+    color: rgb(144, 255, 59);
 }
 
 #linkedcolor:hover {
-    color:rgb(57, 57, 217);
+    color:rgb(144, 255, 59);
 }
 
 #gitcolor:hover {
-    color: rgb(234, 203, 208);
+    color: rgb(144, 255, 59);
 }
 
 #youcolor:hover {
-    color: red;
+    color: rgb(144, 255, 59);
 }
 
 /*Resume page*/
 #resumepage {
-    overflow: scroll; 
+    overflow: scroll;
+    background-color: black; 
 }
 
 #resumeimage {
@@ -116,8 +142,10 @@ a:hover, a:active { text-decoration: none; color:black }
 #resumeheader {
    display: flex;
    font-size: 6vw;
-   background-color: white;
+   background-color: black;
    justify-content: center;
+   color: white;
+   font-family: "spike";
 }
 
 .wrapper2 {
@@ -132,13 +160,17 @@ a:hover, a:active { text-decoration: none; color:black }
     flex-direction: column;
     justify-content: center;
     gap: 20px;
+    font-family: "tangerine";
 }
 
 #downloadbutton {
     text-decoration: underline;
+    font-family: "tangerineb";
+    font-size: 30px;
 }
 #downloadbutton:hover {
     text-decoration: none;
+    color: rgb(144, 255, 59);
 }
 
 /*Contact Page*/
@@ -146,7 +178,7 @@ a:hover, a:active { text-decoration: none; color:black }
 .content2 {
     display: flex;
     flex: 1;
-    background-color: white;
+    background-color: black;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -164,9 +196,9 @@ a:hover, a:active { text-decoration: none; color:black }
 }
 
 #contactinfo {
-    font-family: "andersfont";
+    font-family: "tangerineb";
     font-size: 28px;
-    color: rgb(30, 30, 30);
+    color:white;
 }
 
 /*Kaledo Page*/
@@ -174,11 +206,12 @@ a:hover, a:active { text-decoration: none; color:black }
 .content3 {
     display: flex;
     flex: 1;
-    background-color: white;
+    background-color: black;
     justify-content: flex-start;
     align-items: left;
     flex-direction: column;
     gap: 30px;
+    color: white;
 }
 
 .kaledoset {
@@ -194,11 +227,13 @@ a:hover, a:active { text-decoration: none; color:black }
 }
 
 .ddtext {
-    padding: 15px 5px 0px 25px;
     font-size: 40px;
+    font-family: "tangerineb";
+    align-self: flex-end;
+    margin: 50px;
 }
 
-/*Kaledo Page*/
+/*TXMI Page*/
 
 .txmipic {
     max-width: 70%;
@@ -206,9 +241,11 @@ a:hover, a:active { text-decoration: none; color:black }
 }
 
 .txmitext {
-    padding: 15px 5px 0px 25px;
     font-size: 30px;
     font-family: cursive;
+    color: white;
+    align-self: flex-end;
+    margin: 50px;
 }
 
 .garmentphotos {
@@ -222,6 +259,10 @@ a:hover, a:active { text-decoration: none; color:black }
     justify-content: center;
     gap: 30px;
     flex-wrap: wrap;
+}
+
+.txmitext {
+    font-family: "tangerineB"
 }
 
 /*media queries*/
