--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,6 @@
 }
 
 @font-face {
-    font-family: 'louisa';
-    src: url(LouisaCP.otf);
-}
-
-@font-face {
     font-family: 'tangerine';
     src: url(tangerine.ttf);
 }
@@ -23,8 +18,6 @@
     font-family: 'tangerineb';
     src: url(tangerineB.ttf);
 }
-
-
 
 /*Main page(base style)*/
 
@@ -97,35 +90,35 @@ a:focus { text-decoration: none; color:white; }
 a:hover, a:active { text-decoration: none; color:white }
 
 .resumetag:hover {
-    color: rgb(144, 255, 59);
+    color: rgb(192, 192, 192);
 }
 
 .txmitag:hover {
-    color: rgb(144, 255, 59);
+    color: rgb(192, 192, 192);
 }
 
 .kaledotag:hover {
-    color: rgb(144, 255, 59);
+    color: rgb(192, 192, 192);
 }
 
 .contacttag:hover {
-    color:rgb(144, 255, 59);
+    color:rgb(192, 192, 192);
 }
 
 .fdsatag:hover {
-    color: rgb(144, 255, 59);
+    color: rgb(192, 192, 192);
 }
 
 #linkedcolor:hover {
-    color:rgb(144, 255, 59);
+    color:rgb(192, 192, 192);
 }
 
 #gitcolor:hover {
-    color: rgb(144, 255, 59);
+    color: rgb(192, 192, 192);
 }
 
 #youcolor:hover {
-    color: rgb(144, 255, 59);
+    color: rgb(192, 192, 192);
 }
 
 /*Resume page*/
@@ -170,7 +163,7 @@ a:hover, a:active { text-decoration: none; color:white }
 }
 #downloadbutton:hover {
     text-decoration: none;
-    color: rgb(144, 255, 59);
+    color: rgb(192, 192, 192);
 }
 
 /*Contact Page*/
@@ -241,7 +234,7 @@ a:hover, a:active { text-decoration: none; color:white }
 }
 
 .txmitext {
-    font-size: 30px;
+    font-size: 40px;
     font-family: cursive;
     color: white;
     align-self: flex-end;
@@ -271,6 +264,7 @@ a:hover, a:active { text-decoration: none; color:white }
 
     .maincontainer {
         flex-direction: column;
+        width: 100%;
     }
 
     .sidebar {
@@ -282,6 +276,7 @@ a:hover, a:active { text-decoration: none; color:white }
         align-items: center;
         padding: 0;
         font-size: 20px;
+        width: 100%;
     }
 
     #resumenav {
