--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ footer {
 }
 
 #derscollege {
-    max-width: 40%;
+    max-width: 30%;
     height: auto;
 }
 
@@ -256,6 +256,10 @@ a:hover, a:active { text-decoration: none; color:white }
 
 .txmitext {
     font-family: "tangerineB"
+}
+
+#tredpage {
+    background-color: black;
 }
 
 /*media queries*/
