--- a/(pages)re.css
+++ b/(pages)re.css
@@ -47,23 +47,33 @@ body {
     color: red;
     font-size: 150px;
 }
-.bottomtextbox {
+/*this is for the button*/
+.buttonholder {
     display: flex;
-    flex-direction: column;
     border-style: solid;
-    border-color: green;
-    color: red;
-    font-size: 30px;
+    border-color: purple;
+    justify-content: end;
+    height: 70px;
+}
+.navbutton {
+    border-style: solid;
+    border-color: red;
+    height: 40px;
+    margin-top: 10px;
+    margin-right: 10px;
+    height: 40px;
+    width: 40px;
+    border-radius: 15px;
 }
 /*this is for the navbar*/
 .sidebar {
     position: fixed;
     bottom: 0;
-    left: 0;
+    right: 0;
     margin-bottom: 7px;
-    margin-left: 7px;
+    margin-right: 7px;
     height: 300px;
-    width: 700px;
+    width: 680px;
     border-style: solid;
     border-color: aqua;
     display: none;
@@ -82,7 +92,7 @@ body {
 .navclose {
     fill: red;
     position: fixed;
-    bottom: 260px;
-    left: 700px;
+    bottom: 265px;
+    right: 30px;
 }
 .navtext:hover { color:lightskyblue; }
