--- a/(home)re.css
+++ b/(home)re.css
@@ -109,3 +109,12 @@ body {
     align-items: center;
 }
 
+@keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+.nametext {
+    animation: blink 1.5s linear infinite !important;
+}
