--- a/(pages)re.css
+++ b/(pages)re.css
@@ -9,7 +9,7 @@ body {
 }
 .bodytag {
     background-color: yellow;
-    overflow: scroll;
+    overflow: auto;
 }
 /*This flex should cover the screen*/
 .biggestflex {
@@ -20,11 +20,11 @@ body {
 /*Box on the left...duh*/
 .bigboxleft {
     border-style: solid;
-    border-color: red;
+    border-color: purple;
     display: flex;
     flex-direction: row;
     width: 800px;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
 }
 .resumeimage { /*This one is just the resume page*/
@@ -58,6 +58,10 @@ body {
     border-color: purple;
     justify-content: end;
     height: 70px;
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+    z-index: 9;
 }
 .navbutton {
     border-style: solid;
@@ -82,6 +86,7 @@ body {
     border-color: aqua;
     display: none;
     background-color: white;
+    z-index: 10;
 }
 .sidebar li{ /*not entirerly sure why i need this...but it doesnt' work without it*/
     display: inline-block;
