--- a/(pages)re.css
+++ b/(pages)re.css
@@ -23,15 +23,20 @@ body {
     border-color: purple;
     display: flex;
     flex-direction: row;
-    width: 800px;
+    width: 880px;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    row-gap: 10px;
+    column-gap: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 .resumeimage { /*This one is just the resume page*/
     height: 650px;
 }
 .multimage { /*This is all pages with mulitple images*/
-    height: 400px;
+    height: 300px;
 }
 /*box on the right*/
 .bigboxright {
