--- a/(pages)re.css
+++ b/(pages)re.css
@@ -55,6 +55,7 @@ body {
     border-color: green;
     color: red;
     font-size: 150px;
+    font-family: "Lilita One";
 }
 /*this is for the button*/
 .buttonholder {
