--- a/(pages)re.css
+++ b/(pages)re.css
@@ -48,7 +48,7 @@ body {
     max-width: 70%;
     height: auto;
 }
-.kaledotext { /*This is for the text on the kaleido page*/
+.kaledotext { /*This is for the text in the left box with the images*/
     font-size: 30px;
     font-family: "Lilita One";
     color: red;
@@ -120,10 +120,8 @@ svg {
     margin-right: 7px;
     height: 300px;
     width: 490px;
-    border-style: solid;
-    border-color: aqua;
     display: none;
-    background-color: white;
+    background-color: yellowgreen;
     z-index: 10;
 }
 .sidebar li{ /*not entirerly sure why i need this...but it doesnt' work without it*/
