designs coming in!

--- a/(pages)re.css
+++ b/(pages)re.css
@@ -7,7 +7,8 @@ body {
     margin-bottom: 0%;
 }
 .bodytag {
-    background-color: yellow;
+    background-color: rgb(255, 255, 69);
+    background-image: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/websitebackgroundred%3Ayellow%2Bmore.png);
     overflow: auto;
 }
 /*This flex should cover the screen*/
@@ -48,7 +49,7 @@ body {
 .kaledotext { /*This is for the text in the left box with the images*/
     font-size: 30px;
     font-family: "Lilita One";
-    color: red;
+    color: rgb(255, 44, 44);
     align-self: flex-start;
     margin-left: 20px;
 }
@@ -64,9 +65,10 @@ body {
 .toptextbox {
     display: flex;
     flex-direction: column;
-    color: red;
+    color: rgb(255, 44, 44);
     font-size: 150px;
     font-family: "Lilita One";
+    align-items: flex-end;
 }
 .bottomtextbox {
     display: flex;
@@ -87,8 +89,8 @@ body {
 }
 .navbutton {
     border-style: solid;
-    border-color: red;
-    background-color: red;
+    border-color: rgb(255, 44, 44);
+    background-color: rgb(255, 44, 44);
     height: 40px;
     margin-top: 10px;
     margin-right: 10px;
@@ -98,7 +100,7 @@ body {
     cursor: grab;
 }
 svg {
-    fill: green;
+    fill: lightblue;
 }
 /*this is for the navbar*/
 .sidebar {
@@ -110,7 +112,9 @@ svg {
     height: 300px;
     width: 490px;
     display: none;
-    background-color: yellowgreen;
+    background-color: rgb(255, 61, 61);
+    border-style: solid;
+    border-color: rgb(0, 255, 145);
     z-index: 10;
 }
 .sidebar li{ /*not entirerly sure why i need this...but it doesnt' work without it*/
@@ -123,7 +127,7 @@ svg {
     font-family: "Lilita One";
 }
 .navclose {
-    fill: red;
+    fill: rgb(255, 44, 44);
     position: fixed;
     bottom: 35px;
     right: 27px;
@@ -131,11 +135,11 @@ svg {
 /*logos on contact pages*/
 .logos {
     font-size: 100px;
-    color: red;
+    color: rgb(255, 44, 44);
     transition: color 0.5s;
 }
 .logos:hover {
-    color: lightskyblue;
+    color: rgb(0, 255, 145);
 }
 .logogroup {
     display: flex;
@@ -146,23 +150,23 @@ svg {
 .contactinfo {
     font-size: 20px;
     font-family: "Lilita One";
-    color: red;
+    color: rgb(255, 44, 44);
     text-align: center;
 }
 /* Font Decoration */
 .bottomtextbox a {
-    color: red;
+    color: rgb(255, 44, 44);
     text-decoration: none;
     transition: color 0.5s;
     cursor: help;
 }
 .bottomtextbox a:hover {
-    color: lightskyblue;
+    color: lightblue;
 }
 .navtext {
-    color: red;
+    color: rgb(255, 255, 69);
     text-decoration: none;
     transition: color 0.5s;
 }
-.navtext:hover { color:lightskyblue; 
+.navtext:hover { color:lightblue; 
 }
