--- a/(home)re.css
+++ b/(home)re.css
@@ -8,7 +8,8 @@ body {
     margin-bottom: 0%;
 }
 .mainbody {
-    background-color: yellow;
+    background-color: rgb(255, 255, 69);
+    background-image: url(https://storage.googleapis.com/derswebsitebucket/Backgrounds/websitebackgroundred%3Ayellow%2Bmore.png);
     overflow: hidden;
 }
 /*This flex should cover the screen*/
@@ -29,7 +30,7 @@ body {
     flex-direction: column;
     margin-top: 30px;
     margin-left: 10px;
-    color: red;
+    color: rgb(255, 44, 44);
 }
 .asidetext {
     font-family: "Lilita One";
@@ -46,8 +47,8 @@ body {
 }
 .navbutton {
     border-style: solid;
-    border-color: red;
-    background-color: red;
+    border-color:  rgb(255, 44, 44);
+    background-color:  rgb(255, 44, 44);
     height: 40px;
     margin-top: 10px;
     margin-left: 10px;
@@ -57,7 +58,7 @@ body {
     cursor: grab;
 }
 svg {
-    fill: green;
+    fill: lightblue;
 }
 /*this is for the navbar*/
 .sidebar {
@@ -69,7 +70,9 @@ svg {
     height: 300px;
     width: 690px;
     display: none;
-    background-color: tomato;
+    background-color: rgb(255, 61, 61);
+    border-style: solid;
+    border-color: rgb(0, 255, 145);
 }
 .sidebar li{ /*not entirerly sure why i need this...but it doesnt' work without it*/
     display: inline-block;
@@ -77,7 +80,7 @@ svg {
     padding: 20px;
 }
 .navtext {
-    color: red;
+    color: rgb(255, 255, 69);
     text-decoration: none;
     font-family: "Lilita One";
 }
@@ -101,10 +104,9 @@ svg {
 }
 /*this is for the button decoration*/
 .navtext {
-    color: red;
     text-decoration: none;
     transition: color 0.5s;
 }
-.navtext:hover { color:lightskyblue; 
+.navtext:hover { color:lightblue; 
 }
 
