--- a/(home)re.css
+++ b/(home)re.css
@@ -30,6 +30,8 @@ body {
     margin-top: 30px;
     margin-left: 10px;
     color: rgb(255, 44, 44);
+    text-align: end;
+    margin-top: 185px;
 }
 .asidetext {
     font-family: "Lilita One";
@@ -100,8 +102,9 @@ svg {
 .imgholster {
     height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
+    margin-bottom: 110px;
 }
 .titlecard {
     height: auto;
