--- a/(home)re.css
+++ b/(home)re.css
@@ -36,11 +36,11 @@ body {
 .asidetext {
     font-family: "Lilita One";
     font-size: 30px;
-    text-shadow: -2px 2px black;
+    text-shadow: -2px 2px purple;
 }
 .nametext {
     font-size: 140px;
-    text-shadow: -4px 4px black;
+    text-shadow: -4px 4px purple;
 }
 /*this is for the button*/
 .buttonholder {
