--- a/(pages)re.css
+++ b/(pages)re.css
@@ -174,3 +174,21 @@ svg {
 }
 .navtext:hover { color:lightblue; 
 }
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .biggestflex {
+        flex-direction: column-reverse;
+        width: 153vw;
+        height: 155vh;
+    }
+    .bigboxleft {
+        width: 153vw;
+        height: 155vh;
+        flex-direction: column-reverse;
+        align-items: center;
+        margin-top: 0px;
+    }
+    .toptextbox {
+        align-items: center;
+    }
+  }
